fix: modified screen scroll and white spaces

--- a/src/app/assets/css/OnboardingSteps.css
+++ b/src/app/assets/css/OnboardingSteps.css
@@ -1,3 +1,9 @@
+.onboarding {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
 .onboard1 {
   display: flex;
   justify-content: center;
